Create shards in constructor that constructs default metadata